--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -143,7 +143,7 @@ button {
 }
 
 .MyFilled {
-	font-family: "Hermes";
+	font-family: "Hermes" !important;
 	background-color: $red !important;
 	color: $cream !important;
 }
@@ -152,8 +152,8 @@ button {
 	background: #fbf9be !important;
 	color: $dark_blue !important;
 	&:hover {
-		transition: 1s all;
-		background: $active_green !important;
+		transition: 1s all !important;
+		background: #04ceb4 !important;
 		color: #160f09 !important;
 	}
 }
@@ -342,11 +342,11 @@ input[type="password"] {
 }
 
 .tab-button {
-	color: white;
+	color: white !important;
 	padding: $button-padding !important;
 	max-height: 60px !important;
-	border-width: 2px;
-	border-style: outset;
+	border-width: 2px !important;
+	border-style: outset !important;
 	border-color: -internal-light-dark(
 		rgb(118, 118, 118),
 		rgb(133, 133, 133)
@@ -355,6 +355,7 @@ input[type="password"] {
 	&:hover {
 		background-color: #04ceb4;
 		text-decoration: underline !important;
+		cursor: pointer;
 	}
 }
 
@@ -365,10 +366,10 @@ input[type="password"] {
 
 .active-h1 {
 	font-size: 16px !important;
-	color: white;
-	text-decoration: none;
-	text-transform: capitalize;
-	opacity: 1;
+	color: white !important;
+	text-decoration: none !important;
+	text-transform: capitalize !important;
+	opacity: 1 !important;
 	background: linear-gradient(
 		180deg,
 		#1c2956,
@@ -377,15 +378,19 @@ input[type="password"] {
 		#186297,
 		#1672a4
 	) !important;
-	border-width: 2px;
+	border-width: 2px !important;
 	border-style: outset;
-	border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-	padding: $button-padding;
-	transition: 1s all;
+	border-color: -internal-light-dark(
+		rgb(118, 118, 118),
+		rgb(133, 133, 133)
+	) !important;
+	padding: $button-padding !important;
+	transition: 1s all !important;
 	max-height: 60px !important;
 	&:hover {
-		text-decoration: underline;
-		background-color: #04ceb4 !important;
+		text-decoration: underline !important;
+		background: #04ceb4 !important;
+		cursor: pointer !important;
 	}
 }
 
