--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -65,6 +65,12 @@ h5 {
 	font-family: "hermes";
 }
 
+.MuiButtonBase-root {
+	margin-right: 0 !important;
+	border-radius: 3px;
+	background: $button_blue;
+}
+
 .splash-body {
 	padding: 0;
 	margin: 0;
@@ -96,9 +102,9 @@ button {
 		#1b457b,
 		#186297,
 		#1672a4
-	);
-	color: white;
-	font-size: 16px;
+	) !important;
+	color: white !important;
+	font-size: 16px !important;
 	position: flex;
 	flex-direction: row;
 	padding: $button-padding;
@@ -132,6 +138,9 @@ button {
 	font-family: "Hermes";
 	background: $cream !important;
 	color: $dark_tertiary !important;
+	max-height: 40px !important;
+	box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+		0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
 	&:hover {
 		background: $active_green !important;
 		color: $dark_tertiary !important;
@@ -144,8 +153,11 @@ button {
 
 .MyFilled {
 	font-family: "Hermes" !important;
-	background-color: $red !important;
+	background: $red !important;
 	color: $cream !important;
+	max-height: 40px !important;
+	box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+		0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%) !important;
 }
 
 .tab-btn {
@@ -184,12 +196,6 @@ button {
 
 .MuiGrid-root {
 	margin-left: 0 !important;
-}
-
-.MuiButtonBase-root {
-	margin-right: 0 !important;
-	border-radius: 3px;
-	background: $button_blue;
 }
 
 @media (min-width: 980px) {
@@ -260,6 +266,8 @@ fieldset {
 .drop-down {
 	background: transparent !important;
 	font-family: "demos-next" !important;
+	text-transform: capitalize !important;
+	color: $primary_blue !important;
 }
 .registration-tab {
 	background-color: $dark !important;
@@ -379,7 +387,7 @@ input[type="password"] {
 		#1672a4
 	) !important;
 	border-width: 2px !important;
-	border-style: outset;
+	border-style: outset !important;
 	border-color: -internal-light-dark(
 		rgb(118, 118, 118),
 		rgb(133, 133, 133)
@@ -499,10 +507,16 @@ input:focus {
 	margin: 0 auto;
 }
 
-.card-h1 {
-	color: #1a2040 !important;
-	font-size: 1.4rem;
+.card-h1,
+.card-price {
+	color: $dark_blue !important;
+	font-size: 1.65rem;
 	font-family: "hermes";
+	max-width: 120px !important;
+}
+
+.card-h1 {
+	margin-bottom: 1.5rem;
 }
 
 .thumbnail-group {
@@ -693,23 +707,36 @@ header .banner {
 	font-family: "Hermes";
 	background-color: #2b6ed4;
 	color: $cream;
+	max-height: 35px !important;
+	padding: 10px 15px 10px 15px !important;
+	font-size: 14px;
+	border-radius: 3px;
+	box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+		0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%) !important;
+}
+
+.link-button-checkout {
+	font-family: "Hermes";
 	padding: $button-padding !important;
 	font-size: 14px;
 	max-height: 50px !important;
 	border-radius: 3px;
+	box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+		0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%) !important;
+	background: $cream;
+	color: $dark_blue;
 }
 
 .link-button:before {
 	display: inline-flex;
 	content: " ";
-	background-image: url(/_next/static/media/details_icon.bb6f9835.svg);
-	background-size: 18px 18px;
-	height: 18px;
-	width: 18px;
+	background-image: url(../public/details_icon.svg);
+	background-size: 9px 9px;
+	height: 10px;
+	width: 10px;
 	align-self: flex-start !important;
-	margin-right: 15px;
+	margin-right: 5px;
 	padding: 0 !important;
-	overflow-y: none;
 }
 
 header .banner-text {
